--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "benchmark": "node index.js",
-    "build": "node build.js"
+    "build": "node build.js",
+    "generate": "node generate.js"
   },
   "author": "",
   "license": "ISC",
